Bug 338483 - server/src/handler/akappend.cpp:383: possible bad if test ?
Summary: server/src/handler/akappend.cpp:383: possible bad if test ?
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 1.13.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-22 16:04 UTC by dcb314
Modified: 2014-08-25 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2014-08-22 16:04:17 UTC
akonadi-1.13.0/server/src/handler/akappend.cpp:383]: (style) Same expression on both sides of '||'.

  if ( itemTagsRID.incremental || itemTagsRID.incremental ) {

Maybe

  if ( itemTagsRID.incremental || itemTagsGID.incremental ) {

was intended.
Comment 1 Daniel Vrátil 2014-08-25 12:36:38 UTC
Git commit e52f9be20e566e507e77421f1243f51aa2fe8e55 by Dan Vrátil.
Committed on 25/08/2014 at 12:35.
Pushed by dvratil into branch '1.13'.

Fix typo in if condition
FIXED-IN: 1.13.1

M  +1    -1    server/src/handler/akappend.cpp

http://commits.kde.org/akonadi/e52f9be20e566e507e77421f1243f51aa2fe8e55