Fix typo in if condition

BUG: 338483
FIXED-IN: 1.13.1